# fashion-trainer

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: download_data.sh
fashion_trainer/: constants.py  dataset.py  main.py  model.py  plot.py  trainer.py
