[tool.poetry]
name = "fashion-trainer"
version = "0.1.0"
description = "Training CNN for image classification in pytorch"
authors = ["dan_gawlowski <gawlowski.daniel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
pandas = "^1.1.0"
np = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
isort = "^5.3.2"
pre-commit = "^2.6.0"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
